# mapping-suite-sdk

./: .gitignore  .pylintrc  .readthedocs.yaml  Makefile  README.md  pyproject.toml  requirements.txt  sonar-project.properties  tox.ini
.github/workflows/: pr-checks.yaml  pr-pylint-check.yaml  pr-pylint.yaml  pr-quality-check.yaml  push-badges-update.yaml  push-update-badges.yaml  release-tag-pypi-publish.yaml
docs/: antora-playbook.local.yml  antora-playbook.yml  antora.yml
docs/modules/ROOT/: nav.adoc  nax.adoc
docs/source/: conf.py
mapping_suite_sdk/: __init__.py  vars.py
mapping_suite_sdk/adapters/: extractor.py  hasher.py  loader.py  repository.py  serialiser.py  tracer.py  tracing.py  validator.py
mapping_suite_sdk/entrypoints/cli/: validate.py
mapping_suite_sdk/models/: asset.py  core.py  mapping_package.py
mapping_suite_sdk/services/: load_mapping_package.py  serialise_mapping_package.py  validate_mapping_package.py
mssdk/adapters/: extractor.py  loader.py  log_tracer.py  serialiser.py  unpacker.py
mssdk/core/adapters/: cm_importer.py  importer.py  loader.py  package_importer.py
mssdk/core/models/: core.py  eforms_package.py  files.py  mapping_package.py
mssdk/models/: asset.py  core.py  eforms_package.py  files.py  mapping_package.py
mssdk/services/: load_mapping_package.py  serialise_mapping_package.py  tracing.py
tests/: __init__.py  conftest.py
tests/test_data/mapping_packages/: package_eforms_29_v1.9_changed_model.json
tests/unit/: test_dummy.py  test_importer.py  test_mssdk_api.py
tests/unit/adapters/: test_hasher.py  (+9 more)
(+70 files in other folders)
