[project]
name = "mssdk"
version = "0.1.0"
description = ""
authors = [
    { name = "meaningfy.ws", email = "hi@meaingfy.ws" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "rarfile (>=4.2,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mssdk"
package-mode = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
tox = "^4.24.1"

